# biometric-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
biometric_client/: hooks.py  modules.txt
biometric_client/biometric_client/: api.py
biometric_client/biometric_client/doctype/biometric_client_settings/: biometric_client_settings.js  biometric_client_settings.json  biometric_client_settings.py  test_biometric_client_settings.py
biometric_client/biometric_client/doctype/biometric_data_staging/: biometric_data_staging.js  biometric_data_staging.json  biometric_data_staging.py  biometric_data_staging_list.js  biometric_data_staging_list.py  biometric_sync.py  test_biometric_data_staging.py
biometric_client/biometric_client/report/employee_with_shift_assignment_and_attendance_record/: employee_with_shift_assignment_and_attendance_record.js  employee_with_shift_assignment_and_attendance_record.json  employee_with_shift_assignment_and_attendance_record.py
biometric_client/biometric_client/report/employee_with_shift_but_no_attendance_data/: employee_with_shift_but_no_attendance_data.js  employee_with_shift_but_no_attendance_data.json  employee_with_shift_but_no_attendance_data.py
biometric_client/config/: desktop.py  docs.py
